feat: Implement complete Open-RMF Fedora packaging system with dependency management
- Add distro-based package configuration system with individual YAML configs
- Implement proper RPM changelog format with version tracking
- Add dependency-based build order generation using NetworkX
- Create Jinja2-based spec file templating with patch support
- Add clean-changelogs functionality for fresh package starts
- Implement build priority system (1-6) following RMF architecture
- Add comprehensive package dependency mapping for all RMF components
- Create generic build order JSON output without version-specific data
- Update system to use distro/*.repo as source of truth for package definitions
- Add documentation for distro management and patch creation workflows

This creates a complete rosfed-style packaging system for Open-RMF with proper
dependency resolution, build ordering, and RPM generation capabilities.

Signed-off-by: saypaul <saypaul@redhat.com>

--- a/cfg/jazzy/ament_cmake_catch2.yaml
+++ b/cfg/jazzy/ament_cmake_catch2.yaml
@@ -1,19 +1,16 @@
 package_name: ament_cmake_catch2
-repository: https://github.com/open-rmf/ament_cmake_catch2
-version: "1.2.1"
-release_tag: "jazzy"
-
 build_depends:
-  - ament_cmake_core
-  - ament_cmake_test
-
-exec_depends:
-  - ament_cmake_test
-
+- ament_cmake
+exec_depends: []
 system_depends:
-  - cmake
-  - gcc-c++
-
-description: "Allows integrating catch2 tests in the ament buildsystem with CMake"
+- cmake
+- gcc-c++
+description: 'RMF package: ament_cmake_catch2'
 license: Apache-2.0
-build_priority: 1 
+build_priority: 1
+repository: https://github.com/open-rmf/ament_cmake_catch2
+version: 1.4.1
+release: 1
+changelog:
+- entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.1.4.1-1'
+  message: '- Updated from distro/jazzy.repo'
