--- a/cfg/jazzy/rmf_traffic.yaml
+++ b/cfg/jazzy/rmf_traffic.yaml
@@ -1,30 +1,19 @@
-# Dependency configuration for rmf_traffic
 package_name: rmf_traffic
-repository: https://github.com/open-rmf/rmf_traffic
-version: "3.3.1"
-release_tag: "3.3.1"
-
 build_depends:
-  - ament_cmake
-  - ament_cmake_catch2
-  - rmf_utils
-  - eigen3
-  - yaml-cpp
-
-exec_depends:
-  - rmf_utils
-  - eigen3
-  - yaml-cpp
-
+- ament_cmake
+- rmf_utils
+exec_depends: []
 system_depends:
-  - cmake
-  - gcc-c++
-  - eigen3-devel
-  - yaml-cpp-devel
-
-description: "Package for managing traffic in the Robotics Middleware Framework"
+- cmake
+- gcc-c++
+- eigen3-devel
+- yaml-cpp-devel
+description: 'RMF package: rmf_traffic'
 license: Apache-2.0
 build_priority: 2
-
-patches:
-  - rmf_traffic-fedora-cmake.patch 
+repository: https://github.com/open-rmf/rmf_traffic
+version: 3.3.3
+release: 1
+changelog:
+- entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.3.3.3-1'
+  message: '- Updated from distro/jazzy.repo'
