--- a/cfg/jazzy/menge_vendor.yaml
+++ b/cfg/jazzy/menge_vendor.yaml
@@ -1,20 +1,16 @@
 package_name: menge_vendor
-repository: https://github.com/open-rmf/menge_vendor
-version: "1.1.0"
-release_tag: "master"
-
 build_depends:
-  - ament_cmake
-  - ament_cmake_vendor_package
-
+- ament_cmake
 exec_depends: []
-
 system_depends:
-  - cmake
-  - gcc-c++
-  - git
-
-description: "Wrapper around Menge crowd simulation framework"
+- cmake
+- gcc-c++
+description: 'RMF package: menge_vendor'
 license: Apache-2.0
 build_priority: 1
-vendor_package: true 
+repository: https://github.com/open-rmf/menge_vendor
+version: 1.2.1
+release: 1
+changelog:
+- entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.1.2.1-1'
+  message: '- Updated from distro/jazzy.repo'
