--- a/cfg/jazzy/pybind11_json_vendor.yaml
+++ b/cfg/jazzy/pybind11_json_vendor.yaml
@@ -1,21 +1,16 @@
 package_name: pybind11_json_vendor
-repository: https://github.com/open-rmf/pybind11_json_vendor
-version: "0.2.13"
-release_tag: "0.2.13"
-
 build_depends:
-  - ament_cmake
-  - ament_cmake_vendor_package
-
+- ament_cmake
 exec_depends: []
-
 system_depends:
-  - cmake
-  - gcc-c++
-  - python3-devel
-  - pybind11-devel
-
-description: "Vendor package for pybind11_json"
+- cmake
+- gcc-c++
+description: 'RMF package: pybind11_json_vendor'
 license: Apache-2.0
 build_priority: 1
-vendor_package: true 
+repository: https://github.com/open-rmf/pybind11_json_vendor
+version: 0.4.2
+release: 1
+changelog:
+- entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.0.4.2-1'
+  message: '- Updated from distro/jazzy.repo'
