--- a/cfg/jazzy/rmf_api_msgs.yaml
+++ b/cfg/jazzy/rmf_api_msgs.yaml
@@ -1,21 +1,16 @@
 package_name: rmf_api_msgs
-repository: https://github.com/open-rmf/rmf_api_msgs
-version: "0.3.0"
-release_tag: "0.3.0"
-
 build_depends:
-  - ament_cmake
-  - builtin_interfaces
-  - rosidl_default_generators
-
-exec_depends:
-  - builtin_interfaces
-  - rosidl_default_runtime
-
+- ament_cmake
+exec_depends: []
 system_depends:
-  - cmake
-  - gcc-c++
-
-description: "A package containing messages used to define the RMF REST API"
+- cmake
+- gcc-c++
+description: 'RMF package: rmf_api_msgs'
 license: Apache-2.0
-build_priority: 1 
+build_priority: 1
+repository: https://github.com/open-rmf/rmf_api_msgs
+version: 0.3.1
+release: 1
+changelog:
+- entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.0.3.1-1'
+  message: '- Updated from distro/jazzy.repo'
