--- a/cfg/jazzy/rmf_battery.yaml
+++ b/cfg/jazzy/rmf_battery.yaml
@@ -1,20 +1,17 @@
 package_name: rmf_battery
-repository: https://github.com/open-rmf/rmf_battery
-version: "0.3.0"
-release_tag: "0.3.0"
-
 build_depends:
-  - ament_cmake
-  - ament_cmake_catch2
-  - rmf_utils
-
-exec_depends:
-  - rmf_utils
-
+- ament_cmake
+- rmf_utils
+exec_depends: []
 system_depends:
-  - cmake
-  - gcc-c++
-
-description: "Battery management utilities for Robotics Middleware Framework"
+- cmake
+- gcc-c++
+description: 'RMF package: rmf_battery'
 license: Apache-2.0
-build_priority: 2 
+build_priority: 2
+repository: https://github.com/open-rmf/rmf_battery
+version: 0.3.1
+release: 1
+changelog:
+- entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.0.3.1-1'
+  message: '- Updated from distro/jazzy.repo'
