--- a/cfg/jazzy/rmf_api_msgs.yaml
+++ b/cfg/jazzy/rmf_api_msgs.yaml
@@ -1,12 +1,13 @@
 package_name: rmf_api_msgs
-build_depends:
-- ament_cmake
+build_depends: []
 exec_depends: []
 system_depends:
 - cmake
 - gcc-c++
-description: 'RMF package: rmf_api_msgs'
-license: Apache-2.0
+- json-devel
+- python3-jinja2
+description: RMF API msgs definition
+license: Apache License 2.0
 build_priority: 1
 repository: https://github.com/open-rmf/rmf_api_msgs
 version: 0.3.1
@@ -14,3 +15,19 @@ release: 1
 changelog:
 - entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.0.3.1-1'
   message: '- Updated from distro/jazzy.repo'
+build_env:
+  PYTHONPATH: /usr/lib64/ros2-jazzy/lib/python3.13/site-packages
+cmake_args:
+- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+custom_files:
+- /usr/include/rmf_api_msgs/*
+- /usr/share/schemas/*
+- /usr/lib/python3.13/site-packages/rmf_api_msgs/*
+- /usr/lib/python3.13/site-packages/rmf_api_msgs-*/*
+- /usr/share/rmf_api_msgs/*
+- /usr/lib/rmf_api_msgs/*
+- /usr/lib64/rmf_api_msgs/cmake/*
+- /usr/share/ament_index/resource_index/package_run_dependencies/rmf_api_msgs
+- /usr/share/ament_index/resource_index/packages/rmf_api_msgs
+- /usr/share/ament_index/resource_index/parent_prefix_path/rmf_api_msgs
+skip_debug: true
