--- a/cfg/jazzy/rmf_visualization_msgs.yaml
+++ b/cfg/jazzy/rmf_visualization_msgs.yaml
@@ -1,12 +1,26 @@
 package_name: rmf_visualization_msgs
 build_depends:
-- ament_cmake
-exec_depends: []
+- builtin_interfaces
+exec_depends:
+- builtin_interfaces
+- rosidl_default_runtime
 system_depends:
 - cmake
 - gcc-c++
-description: 'RMF package: rmf_visualization_msgs'
-license: Apache-2.0
+- ros2-jazzy-ament_cmake-devel
+- ros2-jazzy-rosidl_default_generators-devel
+- ros2-jazzy-rosidl_default_runtime-devel
+- ros2-jazzy-rosidl_typesupport_c
+- ros2-jazzy-rosidl_typesupport_cpp
+- ros2-jazzy-rosidl_typesupport_fastrtps_c
+- ros2-jazzy-rosidl_typesupport_fastrtps_cpp
+- ros2-jazzy-rosidl_typesupport_interface
+- ros2-jazzy-rosidl_typesupport_introspection_c
+- ros2-jazzy-rosidl_typesupport_introspection_cpp
+- json-devel
+- python3-jinja2
+description: A package containing messages used for visualizations
+license: Apache License 2.0
 build_priority: 1
 repository: https://github.com/open-rmf/rmf_visualization_msgs
 version: 1.4.1
@@ -14,3 +28,22 @@ release: 1
 changelog:
 - entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.1.4.1-1'
   message: '- Updated from distro/jazzy.repo'
+build_env:
+  PYTHONPATH: /usr/lib64/ros2-jazzy/lib/python3.13/site-packages
+  AMENT_PREFIX_PATH: /usr/lib64/ros2-jazzy
+  CMAKE_PREFIX_PATH: /usr/lib64/ros2-jazzy
+  PKG_CONFIG_PATH: /usr/lib64/ros2-jazzy/lib/pkgconfig
+  LD_LIBRARY_PATH: /usr/lib64/ros2-jazzy/lib
+cmake_args:
+- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+skip_debug: true
+custom_files:
+- /usr/include/rmf_visualization_msgs/*
+- /usr/lib/librmf_visualization_msgs__*.so
+- /usr/share/rmf_visualization_msgs/*
+- /usr/lib/python3.13/site-packages/rmf_visualization_msgs/*
+- /usr/lib/python3.13/site-packages/rmf_visualization_msgs-*/*
+- /usr/share/ament_index/resource_index/package_run_dependencies/rmf_visualization_msgs
+- /usr/share/ament_index/resource_index/packages/rmf_visualization_msgs
+- /usr/share/ament_index/resource_index/parent_prefix_path/rmf_visualization_msgs
+- /usr/share/ament_index/resource_index/rosidl_interfaces/rmf_visualization_msgs
