--- a/cfg/jazzy/rmf_internal_msgs.yaml
+++ b/cfg/jazzy/rmf_internal_msgs.yaml
@@ -1,13 +1,27 @@
 package_name: rmf_internal_msgs
 build_depends:
-- ament_cmake
-- rmf_building_map_msgs
-exec_depends: []
+- builtin_interfaces
+exec_depends:
+- builtin_interfaces
+- rosidl_default_runtime
 system_depends:
 - cmake
 - gcc-c++
-description: 'RMF package: rmf_internal_msgs'
-license: Apache-2.0
+- ros2-jazzy-ament_cmake-devel
+- ros2-jazzy-rosidl_default_generators-devel
+- ros2-jazzy-rosidl_default_runtime-devel
+- ros2-jazzy-rosidl_typesupport_c-devel
+- ros2-jazzy-rosidl_typesupport_cpp-devel
+- ros2-jazzy-rosidl_typesupport_fastrtps_c-devel
+- ros2-jazzy-rosidl_typesupport_fastrtps_cpp-devel
+- ros2-jazzy-rosidl_typesupport_interface-devel
+- ros2-jazzy-rosidl_typesupport_introspection_c-devel
+- ros2-jazzy-rosidl_typesupport_introspection_cpp-devel
+- ros2-jazzy-ament_lint_auto-devel
+- json-devel
+- python3-jinja2
+description: This package contains messages regarding charging and discharging
+license: Apache License 2.0
 build_priority: 2
 repository: https://github.com/open-rmf/rmf_internal_msgs
 version: 3.3.1
@@ -15,3 +29,25 @@ release: 1
 changelog:
 - entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.3.3.1-1'
   message: '- Updated from distro/jazzy.repo'
+build_env:
+  PYTHONPATH: /usr/lib64/ros2-jazzy/lib/python3.13/site-packages
+  AMENT_PREFIX_PATH: /usr/lib64/ros2-jazzy
+  CMAKE_PREFIX_PATH: /usr/lib64/ros2-jazzy
+  PKG_CONFIG_PATH: /usr/lib64/ros2-jazzy/lib/pkgconfig
+  LD_LIBRARY_PATH: /usr/lib64/ros2-jazzy/lib
+# Point to subdirectory containing CMakeLists.txt
+source_dir: "rmf_charger_msgs"
+cmake_args:
+- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+skip_debug: true
+custom_files:
+# Building only rmf_charger_msgs package from the meta-package
+- /usr/include/rmf_charger_msgs/*
+- /usr/lib/librmf_charger_msgs__*.so
+- /usr/share/rmf_charger_msgs/*
+- /usr/lib/python3.13/site-packages/rmf_charger_msgs/*
+- /usr/lib/python3.13/site-packages/rmf_charger_msgs-*/*
+- /usr/share/ament_index/resource_index/package_run_dependencies/rmf_charger_msgs
+- /usr/share/ament_index/resource_index/packages/rmf_charger_msgs
+- /usr/share/ament_index/resource_index/parent_prefix_path/rmf_charger_msgs
+- /usr/share/ament_index/resource_index/rosidl_interfaces/rmf_charger_msgs
