--- a/cfg/jazzy/rmf_building_map_msgs.yaml
+++ b/cfg/jazzy/rmf_building_map_msgs.yaml
@@ -36,16 +36,17 @@ build_env:
   CMAKE_PREFIX_PATH: /usr/lib64/ros2-jazzy
   PKG_CONFIG_PATH: /usr/lib64/ros2-jazzy/lib/pkgconfig
   LD_LIBRARY_PATH: /usr/lib64/ros2-jazzy/lib
-cmake_args:
-- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+source_dir: "."
+use_colcon: true
 skip_debug: true
 custom_files:
-- /usr/include/rmf_building_map_msgs/*
-- /usr/lib/librmf_building_map_msgs__*.so
-- /usr/share/rmf_building_map_msgs/*
-- /usr/lib/python3.13/site-packages/rmf_building_map_msgs/*
-- /usr/lib/python3.13/site-packages/rmf_building_map_msgs-*/*
-- /usr/share/ament_index/resource_index/package_run_dependencies/rmf_building_map_msgs
-- /usr/share/ament_index/resource_index/packages/rmf_building_map_msgs
-- /usr/share/ament_index/resource_index/parent_prefix_path/rmf_building_map_msgs
-- /usr/share/ament_index/resource_index/rosidl_interfaces/rmf_building_map_msgs
+- "%{_libdir}/ros2-jazzy/include/rmf_building_map_msgs/*"
+- "%{_libdir}/ros2-jazzy/lib/librmf_building_map_msgs__*.so"
+- "%{_libdir}/ros2-jazzy/share/rmf_building_map_msgs/*"
+- "%{_libdir}/ros2-jazzy/lib/python3.13/site-packages/rmf_building_map_msgs/*"
+- "%{_libdir}/ros2-jazzy/lib/python3.13/site-packages/rmf_building_map_msgs-*/*"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/package_run_dependencies/rmf_building_map_msgs"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/packages/rmf_building_map_msgs"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/parent_prefix_path/rmf_building_map_msgs"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/rosidl_interfaces/rmf_building_map_msgs"
+- "%{_libdir}/ros2-jazzy/share/colcon-core/packages/rmf_building_map_msgs"
