--- a/cfg/jazzy/rmf_battery.yaml
+++ b/cfg/jazzy/rmf_battery.yaml
@@ -26,12 +26,11 @@ build_env:
   CMAKE_PREFIX_PATH: /usr/lib64/ros2-jazzy
   PKG_CONFIG_PATH: /usr/lib64/ros2-jazzy/lib/pkgconfig
   LD_LIBRARY_PATH: /usr/lib64/ros2-jazzy/lib
-cmake_args:
-- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+source_dir: "."
+use_colcon: true
 skip_debug: true
 custom_files:
-- /usr/include/rmf_battery/*
-- /usr/lib64/librmf_battery.so
-- /usr/lib64/rmf_battery/cmake/*
-- /usr/share/rmf_battery/*
-- /usr/share/ament_index/resource_index/packages/rmf_battery
+- "%{_libdir}/ros2-jazzy/include/rmf_battery/*"
+- "%{_libdir}/ros2-jazzy/share/rmf_battery/*"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/packages/rmf_battery"
+- "%{_libdir}/ros2-jazzy/share/colcon-core/packages/rmf_battery"
