--- a/cfg/jazzy/ament_cmake_catch2.yaml
+++ b/cfg/jazzy/ament_cmake_catch2.yaml
@@ -22,12 +22,12 @@ changelog:
 - entry: '* Thu Aug 14 2025 Sayan Paul <paul.sayan@gmail.com> - jazzy.1.4.1-1'
   message: '- Updated from distro/jazzy.repo'
 cmake_args:
-- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+- -DCMAKE_INSTALL_PREFIX=/usr/lib64/ros2-jazzy
 build_env:
   PYTHONPATH: /usr/lib64/ros2-jazzy/lib/python3.13/site-packages
 custom_files:
-- '%{_datadir}/ament_cmake_catch2/'
-- '%{_datadir}/ament_index/resource_index/package_run_dependencies/ament_cmake_catch2'
-- '%{_datadir}/ament_index/resource_index/parent_prefix_path/ament_cmake_catch2'
-- '%{_datadir}/ament_index/resource_index/packages/ament_cmake_catch2'
+- "%{_libdir}/ros2-jazzy/share/ament_cmake_catch2/*"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/package_run_dependencies/ament_cmake_catch2"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/parent_prefix_path/ament_cmake_catch2"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/packages/ament_cmake_catch2"
 skip_debug: true
