--- a/cfg/jazzy/rmf_task.yaml
+++ b/cfg/jazzy/rmf_task.yaml
@@ -6,9 +6,11 @@ system_depends:
 - gcc-c++
 - ros2-jazzy-ament_cmake-devel
 - ros2-jazzy-eigen3_cmake_module-devel
+- ros-jazzy-nlohmann-json-schema-validator-vendor
 - ros-jazzy-rmf-utils
 - ros-jazzy-rmf-traffic
 - ros-jazzy-rmf-battery
+- ros-jazzy-rmf-api-msgs
 - boost-devel
 - eigen3-devel
 - json-devel
@@ -30,16 +32,16 @@ build_env:
   CMAKE_PREFIX_PATH: /usr/lib64/ros2-jazzy
   PKG_CONFIG_PATH: /usr/lib64/ros2-jazzy/lib/pkgconfig
   LD_LIBRARY_PATH: /usr/lib64/ros2-jazzy/lib
-cmake_args:
-- -DCMAKE_PREFIX_PATH=/usr/lib64/ros2-jazzy
+source_dir: "."
+use_colcon: true
 skip_debug: true
 custom_files:
-- /usr/lib64/librmf_task.so
-- /usr/include/rmf_task/requests/*
-- /usr/include/rmf_task/phases/*
-- /usr/include/rmf_task/events/*
-- /usr/include/rmf_task/detail/*
-- /usr/include/rmf_task/*
-- /usr/lib64/rmf_task/cmake/*
-- /usr/share/ament_index/resource_index/packages/rmf_task
-- /usr/share/rmf_task/hook/ament_prefix_path.dsv
+
+- "%{_libdir}/ros2-jazzy/include/rmf_task/*"
+- "%{_libdir}/ros2-jazzy/include/rmf_task_sequence/*"
+- "%{_libdir}/ros2-jazzy/share/rmf_task/*"
+- "%{_libdir}/ros2-jazzy/share/rmf_task_sequence/*"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/packages/rmf_task"
+- "%{_libdir}/ros2-jazzy/share/ament_index/resource_index/packages/rmf_task_sequence"
+- "%{_libdir}/ros2-jazzy/share/colcon-core/packages/rmf_task"
+- "%{_libdir}/ros2-jazzy/share/colcon-core/packages/rmf_task_sequence"
